# highly_sendable

./: CHANGELOG-Notes-v0.2.0.md  CHANGELOG.md  Cargo.toml  README.md
src/: connection_message.rs  connection_state_id.rs  lib.rs  status_definitions.rs  work_in_progress.rs  work_in_progress_message.rs  work_in_progress_result.rs  work_in_progress_result_int_percentage.rs
src/result/: mod.rs  work_in_progress_result.rs
src/text/: mod.rs  sendable_text.rs  sendable_text_immut.rs  sendable_text_log.rs  sendable_text_log_with_buffer.rs
