[package]
name = "highly_sendable"
version = "0.2.0-alpha"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Containers for sending Strings and results within your process and beyond."
repository = "https://github.com/coruscateor/highly_sendable"
homepage = "https://coruscateor.com/projects/highly-sendable"
keywords = ["send", "result", "text", "string", "str"]

[dependencies]
delegate = "0.13.3"
cfg-if = "1.0.0"
serde = { version = "1.0.219", features = ["derive"], optional = true }
corlib = { version = "0.4.1", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

